Prefer regular jar archive build over GraalVM native image